# OLIST-ecommerce

./: .gitignore  Olist_DWH_Deliverable_3.docx  README.md  docker-compose.yml  pyproject.toml  requirement.txt
.github/workflows/: dbt_ci.yml
dags/: airbyte_sync_pipeline.py  dbt_pipeline_dag.py  full_pipline.py
olist_ecommerce/: dbt_project.yml  package-lock.yml  packages.yml
olist_ecommerce/models/BRONZE/: my_external_tables.yml
olist_ecommerce/models/GOLD/: _gold__models.yml  dim_customer.sql  dim_date.sql  dim_feedback_profile.sql  dim_geolocation.sql  dim_order_attribute.sql  dim_product.sql  dim_seller.sql  fact_payment.sql  fact_reviews.sql  fact_sales.sql
olist_ecommerce/models/SILVER/: _silver__models.yml  geolocation_silver.sql  order_payments_silver.sql  order_reviews_silver.sql  orders_items_silver.sql  orders_silver.sql  product_silver.sql
olist_ecommerce/snapshots/: customer_snapshot.sql  seller_snapshot.sql
olist_ecommerce/tests/: assert_delivery_after_purchase.sql  assert_fact_sales_orders_exist.sql  assert_review_answer_after_creation.sql
scripts/: data_pump.py  enable_cdc_setup.py  generate_fixtures.py  olist_simulator.py  publish_secrets.py  scan.py  upload_dags_s3.py
scripts/sql/: setup.sql
scripts/~sql/: appending_data.py  generate_fixtures.py
terraform/: 00_providers.tf  01_vpc.tf  02_security_groups.tf  03_rds.tf  04_s3.tf  05_secrets.tf  06_sns_alerting.tf  07_airbyte_ec2.tf  08_mwaa.tf  09_snowflake_iam.tf  10_outputs.tf  output  terraform.tfvars
